# password_manager

./: README.md
backend/: .gitignore  Dockerfile  init.sh  pyproject.toml
backend/infra/docker/: Dockerfile  docker-compose.yml  docker-stack.yml  entrypoint.sh  init_db.sql  nginx.conf
backend/infra/envs/: env.example
backend/infra/nginx/: nginx.conf
backend/src/apps/organizations/: admin.py
backend/src/apps/organizations/controllers/: views.py
backend/src/apps/organizations/dto/: schema.py
backend/src/apps/organizations/migrations/: 0001_initial.py
backend/src/apps/organizations/models/: __init__.py  organization.py  vault.py
backend/src/apps/product/: admin.py  apps.py  enums.py
backend/src/apps/product/controllers/: folder_views.py  import_export_views.py  views.py
backend/src/apps/product/dto/: folder_schema.py  import_export_schema.py  schema.py
backend/src/apps/product/migrations/: 0001_initial.py  0002_productorm_user.py  0003_productorm_is_encrypted_productorm_password_salt_and_more.py  0004_auto_20260422_1148.py  __init__.py
backend/src/apps/product/models/: __init__.py  category.py  folder.py  models.py  password_history.py
backend/src/apps/user/: admin.py  apps.py  managers.py  permissions.py
backend/src/apps/user/controllers/: auth_views.py  security_views.py  views.py
backend/src/apps/user/dto/: schema.py  (+1 more)
backend/src/config/: admin.py  admin_ip_whitelist.py  authentication.py  breach_monitoring.py  encryption.py  jwt.py  ninja_auth.py  rate_limiting.py  security.py  settings.py  two_factor_middleware.py  urls.py
(+37 files in other folders)
